update success.css file

--- a/success.css
+++ b/success.css
@@ -102,6 +102,7 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
   }
 
   .main_div {
